@@ -66,3 +66,6 @@ Other contributors (sorted by name):
  Andrew Conkling <andrewski@fr.st>
   * helped with the online documentation
 
+ Kir Kolyshkin <kir@sacred.ru>
+  * mouse autohide patch
+
