@@ -1400,6 +1400,7 @@ MiscBell=TRUE
 MiscConfirmClose=FALSE
 MiscCursorBlinks=TRUE
 MiscCycleTabs=TRUE
+MiscMouseAutohide=FALSE
 MiscTabCloseButtons=TRUE</programlisting>
 
       <para>
@@ -1451,6 +1452,17 @@ MiscTabCloseButtons=TRUE</programlisting>
             </para>
             <para>
               This behaviour is disabled by default, because it tends to confuse users.
+            </para>
+          </listitem>
+        </varlistentry>
+
+        <varlistentry>
+          <term><varname>MiscMouseAutohide</varname></term>
+          <listitem>
+            <para>
+              This setting controls whether &application; will hide the mouse cursor
+              while you are typing in a terminal window. Can be either
+              <literal>TRUE</literal> or <literal>FALSE</literal> (the default).
             </para>
           </listitem>
         </varlistentry>
