@@ -1,5 +1,14 @@
 2005-06-11	Benedikt Meurer <benny@xfce.org>
 
+	* terminal/terminal-preferences.c, terminal/terminal-screen.c: Apply
+	  mouse autohide patch from Kir Kolyshkin <kir@sacred.ru>. This fixes
+	  bug #88.
+	* THANKS: Add Kir Kolyshkin <kir@sacred.ru> here.
+	* doc/C/Terminal.xml.in: Add documentation for the new hidden option
+	  MiscMouseAutohide.
+
+2005-06-11	Benedikt Meurer <benny@xfce.org>
+
 	* THANKS, configure.ac, po/hu.po, terminal/terminal-window.c: Add hu
 	  translations, thanks to Szervác Attila <sas@321.hu>.
 	* po/ja.po: Update japanese translations, thanks to Daichi Kawahata
